# nxs-python

./: .flake8  .gitignore  README.rst  pyproject.toml
.github/workflows/: pipeline.yml
python/testing/: pytest_runner.py  pytest_ui.py
python/utils/: encrypt_decrypt.py  install_new_wheel.py
